Add scheduled jobs using quarkus-scheduler (quartz).